--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Formulário de convite</title>
   </head>
-  <body></body>
+  <body>
+    <div class="projeto" grid>
+      <div class="brand">teste</div>
+    </div>
+  </body>
 </html>
