ajustando background-image e espaços entre aside e main

--- a/index.html
+++ b/index.html
@@ -11,10 +11,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Formulário de convite</title>
+
+    <link rel="stylesheet" href="styles/index.css" />
   </head>
   <body>
-    <div class="projeto" grid>
-      <div class="brand">teste</div>
+    <div id="project">
+      <aside>
+        <div class="aside-brand">
+          <div class="tittle">
+          <img src="assets/Logo.svg" alt="Logo da empresa" class="aside-logo" />
+          <h1 class="aside-title">Festivite</h1>
+          <p>Crie um convite digital para o seu evento</p>
+        </div>
+      </div>
+      </aside>
+
+      <main>
+        <div class="main-brand">main</div>
+      </main>
     </div>
   </body>
 </html>
