adicionado arquivos (aside, main) ao projeto e ajustado layout de aside

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <div id="project">
       <aside>
         <div class="aside-brand">
-          <div class="tittle">
-          <img src="assets/Logo.svg" alt="Logo da empresa" class="aside-logo" />
-          <h1 class="aside-title">Festivite</h1>
-          <p>Crie um convite digital para o seu evento</p>
+          <tittle>
+            <img src="assets/Logo.svg" alt="Logo da empresa" class="img-logo" />
+            <h1>Festivite</h1>
+            <p>Crie um convite digital para o seu evento</p>
+          </tittle>
         </div>
-      </div>
       </aside>
 
       <main>
