finalizado parte aside e iniciando o main

--- a/index.html
+++ b/index.html
@@ -20,14 +20,24 @@
         <div class="aside-brand">
           <tittle>
             <img src="assets/Logo.svg" alt="Logo da empresa" class="img-logo" />
-            <h1>Festivite</h1>
+            <h1 class="h1-logo">Festivite</h1>
             <p>Crie um convite digital para o seu evento</p>
           </tittle>
         </div>
       </aside>
 
       <main>
-        <div class="main-brand">main</div>
+        <div class="main-brand">
+          <h1>Crie seu convite</h1>
+
+          <forms>
+            <fieldset>
+              <legend>Informações Pessoais</legend>
+              <label for="nome">Nome:</label>
+              
+            </fieldset>
+          </forms>
+        </div>
       </main>
     </div>
   </body>
