Adicionado seleção de cores (cor principal)

--- a/index.html
+++ b/index.html
@@ -140,8 +140,37 @@
                   <div class="color-style">
                     <input type="radio" name="color" id="color4" value="color4">
                   </div>
+
+                  <div class="color-style">
+                    <input type="radio" name="color" id="color5" value="color5">
+                  </div>
+
+                  <div class="color-style">
+                    <input type="radio" name="color" id="color6" value="color6">
+                  </div>
+
+                  <div class="color-style">
+                    <input type="radio" name="color" id="color7" value="color7">
+                  </div>
+
+                  <div class="color-style">
+                    <input type="radio" name="color" id="color8" value="color8">
+                  </div>
+
+                  <div class="color-style">
+                    <input type="radio" name="color" id="color9" value="color9">
+                  </div>
+
+                  <div class="color-style">
+                    <input type="radio" name="color" id="color10" value="color10">
+                  </div>
+
+                  <div class="color-style">
+                    <input type="radio" name="color" id="color11" value="color11">
+                  </div>
+
                 </div>
-                
+
              </div>           
             </fieldset> 
 
